# kaggle-template

./: LICENSE  README.md  copier.yml
template/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.cpu  README.md  compose.cpu.yaml  compose.yaml  mise.toml  pyproject.toml
template/.claude/: settings.json
template/.claude/skills/kaggle-browse/: SKILL.md
template/experiments/exp000_sample/: config.yaml  run.py
template/experiments/exp000_sample/exp/: 000.yaml  001.yaml
template/notebooks/EDA/: EDA_000.ipynb
template/tools/: check_submission.py  download_dataset.py  kaggle_login.py  setup_kaggle_auth.py  upload_model.py
template/utils/: env.py  experiment.py  git.py  logger.py  timing.py
